// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pagination Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Some description about this type of component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Stack__StyledStack-sc-1t576ow-0 hFKyqx"
          >
            <div
              className="Button__StyledButton-sc-1brqp3f-1 btseQ Pages__StyledButton-sc-9uswv1-0 gkdTZK"
              size="normal"
            >
              <div
                className="Button__StyledButtonContent-sc-1brqp3f-2 bmuxXg"
              >
                1
              </div>
            </div>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              2
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              3
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              4
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              5
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              6
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 jhtwfr"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              Next
              <div
                className="ButtonLink__IconContainer-sc-14jv5cl-0 hfafwY"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Pagination
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            pageCount
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                6
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onPageChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onPageChange
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pagination Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Some description about this type of component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Stack__StyledStack-sc-1t576ow-0 hFKyqx"
            data-test="test"
          >
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 tLtxn"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              <div
                className="ButtonLink__IconContainer-sc-14jv5cl-0 ihfUde"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                </svg>
              </div>
              Previous
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              1
            </button>
            <div
              className="Button__StyledButton-sc-1brqp3f-1 btseQ Pages__StyledButton-sc-9uswv1-0 gkdTZK"
              size="normal"
            >
              <div
                className="Button__StyledButtonContent-sc-1brqp3f-2 bmuxXg"
              >
                2
              </div>
            </div>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              3
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              4
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              5
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 fuWMAQ"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              6
            </button>
            <button
              className="ButtonLink__StyledButtonLink-sc-14jv5cl-1 jhtwfr"
              onClick={[Function]}
              size="normal"
              type="button"
            >
              Next
              <div
                className="ButtonLink__IconContainer-sc-14jv5cl-0 hfafwY"
              >
                <svg
                  className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Pagination
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            pageCount
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                6
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            selectedPage
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                2
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            previousLabel
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Previous
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            nextLabel
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Next
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onPageChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                onPageChange
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
